stylesheet.css
/*//////////////////////////////////
STYLESHEET FOR harry-gilbert WEBSITE
//////////////////////////////////*/

:root {
    --hg-font: 'Lucida Console', 'Courier New', monospace;

    --hg-text: #D0D0D0;
    --hg-text-active: #D0D0D050;
    --hg-bg: #262626;
    --hg-accent: #16568A;
    --hg-accent-light: #FF5D73;
    --hg-link: #7AABD2;

    --hg-transition-duration: 150ms;
    --hg-theme-transition-duration: 200ms;
}

html, body {
    margin: 0;
    padding: 0;
    position: relative;
    min-height: 100vh;
    font-family: var(--hg-font);
    font-size: 16px;
    color: var(--hg-text);
    background-color: var(--hg-bg);
    transition: background-color var(--hg-theme-transition-duration);
}



/* BURGER MENU //
///////////////*/

.menu-container {
    position: fixed;
    left: 25px;
    bottom: 25px;
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto;
    grid-template-areas: 
        "nav"
        "burger";
    pointer-events: none;
    min-width: max-content;
}

.menu-container-lh {
    right: 25px;
    left: initial;
    justify-items: end;
}

.menu-items-flexbox {
    grid-area: nav;
    display: flex;
    flex-direction: row;
}

.menu-items-flexbox-lh {
    justify-content: end;
}

.menu-items {
    position: relative;
    left: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-end;
    transition: max-width var(--hg-transition-duration);
    transition-timing-function: linear;
    overflow-x: hidden;
    max-width: 0;
}

.menu-items-lh {
    align-items: flex-end;
    transform-origin: 100% 100%;
}

.menu-in-view {
    max-width: 100%;
}

.menu-checkbox {
    display: none;
}

.burger {
    grid-area: burger;
    pointer-events: auto;
}

.burger-lh {
    justify-self: flex-end;
}

.menu-items a, .menu-items button {
    display: inline-block;
    color: var(--hg-text);
    border: none;
    font-family: var(--hg-font);
    font-size: 1em;
    text-decoration: none;
    padding: 5px 10px;
    background-color: var(--hg-accent);
    transition: background-color var(--hg-theme-transition-duration);
    pointer-events: auto;
}

.menu-items > * {
    white-space: nowrap;
    margin-bottom: 10px;
}

.settings-items {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    flex-wrap: nowrap;
}

.settings-items > button {
    margin: 0;
}

.settings-items > p {
    padding: 5px 10px;
    background-color: var(--hg-text);
    color: var(--hg-accent);
}

#active {
    color: var(--hg-text-active);
}

.burger {
    width: 70px;
    height: 70px;
    background-color: var(--hg-accent);
    transition: background-color var(--hg-theme-transition-duration);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.burger, .menu-items a, .settings-items button {
    position: relative;
}

.burger::before, .menu-items a::before, .settings-items button::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width:100%;
    max-width: 0;
    background-color: var(--hg-accent-light);
    transition: max-width var(--hg-transition-duration);
}

.burger::before {
    height: 100%;
}

.menu-items a::before, .settings-items button::before {
    height: 3px;
}

.burger-line {
    position: relative;
    top: 0;
    display: inline-block;
    width: 36px;
    height: 4px;
    margin: 4px;
    background-color: var(--hg-text);
    opacity: 1;
    transform: rotate(0);
    transform-origin: center;
    transition: opacity var(--hg-theme-transition-duration), transform var(--hg-theme-transition-duration), margin var(--hg-theme-transition-duration);
}

.burger-cross-first-line {
    margin: 0;
    transform: rotate(45deg);
    top: 4px;
}

.burger-cross-second-line {
    margin: 0;
    opacity: 0;
}

.burger-cross-third-line {
    margin: 0;
    transform: rotate(-45deg);
    top: -4px;
}



/* GENERAL STYLING //
///////////////////*/

p {
    margin: 0;
    padding: 0;
}

a {
    color: var(--hg-link);
}

.content-center {
    padding: 0 0 0 25px;
    position: relative;
    top: 50vh;
    transform: translateY(-50%);
    width: max-content;
}

.content-center h1 {
    margin-top: 0;
    padding-top: 0;
}

#header-cursor {
    animation: blink 1.2s linear 0s infinite normal forwards;
}

@keyframes blink {
    0% {opacity: 0;}
    49% {opacity: 0;}
    50% {opacity: 1;}
    99% {opacity: 1;}
    100% {opacity: 0;}
}

footer {
    font-size: 0.7rem;
    width: 100%;
    text-align: center;
    position: absolute;
    bottom: 25px;
}

.info-page-cont {
    margin-left: 25px;
    width: calc(100% - 50px);
    padding-bottom: 115px;
}

.info-page-header {
    margin: 0;
    padding: 50px 0 25px 0;
}

.info-page-cont p, .info-page-cont li {
    font-family: Arial, Helvetica, sans-serif;
}



/* EXPERIENCE PAGE //
///////////////////*/

.exp-item {
    position: relative;
    padding: 45px 0;
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: auto 1fr;
    grid-template-areas: 
    "logo headers"
    "body body";
    grid-column-gap: 10px;
    grid-row-gap: 20px;
}

.exp-item::after {
    content: '';
    grid-area: body;
    margin: 0 auto;
    position: absolute;
    bottom: -45px;
    left: 50%;
    transform: translateX(-50%);
    width: 50px;
    height: 1px;
    background-color: var(--hg-text);
}

.exp-item:last-of-type::after {
    display: none;
}

.exp-item:first-of-type {
    padding-top: 25px;
}

.exp-item:last-of-type {
    padding-bottom: 0;
}

.exp-logo {
    grid-area: logo;
}

.exp-svg-fill {
    fill: var(--hg-text);
    transition: fill var(--hg-theme-transition-duration);
}

.svg-wide {
    width: 75px;
}

.svg-tall {
    height: 75px;
}

.exp-headers {
    grid-area: headers;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.exp-headers h2 {
    margin: 0;
}

.exp-headers p {
    font-size: 0.8em;
    font-weight: bold;
}

.exp-item-body {
    grid-area: body;
}



/* WHO AM I? PAGE //
///////////////////*/


.who-cont p {
    margin: 10px 0;
}

.who-cont ul {
    margin: 0;
}

p.p-before-ul {
    margin-bottom: 0;
}

.who-cont h3 {
    margin: 50px 0 0 0;
}



/* GET IN TOUCH! PAGE //
//////////////////////*/

.social-cont {
    margin-top: 5px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

address a {
    font-style: normal;
    color: var(--hg-text);
    text-decoration: none;
}

.svg-link {
    text-decoration: none;
}

.svg-link svg {
    width: 50px;
    margin-right: 10px;
}



/* PHOTOGRAPHY PAGE //
////////////////////*/

#photography-cont h3 {
    margin-top: 50px;
}

#photographs-cont {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
}

.photo-column {
    width: calc(50% - 5px);
}

.photo-cont {
    position: relative;
    margin: 0 0 10px 0;
    width:100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    background-color: #00000000;
}

.photo-cont img {
    width: 100%;
    max-width: 90vw;
    max-height: 80vh;
    height: auto;
    transform-origin: center;
    transition: transform var(--hg-transition-duration);
}

.photo-cont figcaption {
    align-self: center;
    width: calc(100% - 30px);
    background-color: #1a1a1a;
    font-family: var(--hg-font);
    font-size: 0.8rem;
    color: #CCCCCC;
    padding: 7px 15px;
    z-index:0;
}

.photo-cont-view {
    width:100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #444444CC;
    z-index: 1;
}

.photo-cont-view img {
    width: auto;
    transition:none;
}

.photo-cont-view figcaption {
    position: relative;
    width: calc(90vw - 30px);
}


/* DESKTOP STYLING //
///////////////////*/

@media only screen and (min-width: 600px) {

    .content-center {
        padding: 0;
        margin: auto;
    }
    
    .info-page-cont {
        max-width: 700px;
        margin: auto;
    }

    .exp-item {
        padding: 75px 0;
    }

    .exp-item:first-of-type {
        padding-top: 50px;
    }

    .exp-item::after {
        bottom: -75px;
    }

    .who-cont {
        padding: 0;
        position: relative;
        top: 50vh;
        transform: translateY(-50%);
    }

    .who-cont h1 {
        padding-top: 0;
    }

    .photo-cont-view figcaption {
        width: auto;
    }
}

@media (hover: hover) {
    #active:hover::before {
        max-width: 0;
    }

    #active:hover {
        cursor: default;
    }

    .burger:hover, .menu-items a:hover, .settings-items button:hover {
        cursor: pointer;
    }
    
    .burger:hover::before, .menu-items a:hover::before, .settings-items button:hover::before {
        max-width: 100%;
    }

    .con-cont svg:hover {
        cursor: pointer;
    }

    .con-cont svg:hover .exp-svg-fill {
        fill: var(--hg-accent);
    }


    .photo-cont:hover {
        cursor: pointer;
    }

    .photo-cont:hover > img {
        transform: scale(1.05);
    }

    .photo-cont-view:hover > img {
        transform: scale(1);
    }
}

